# Abschlussarbeit_PUE2

./: README.md  ekgdata.py  main.py  pyproject.toml  read_fit_file.py  read_pandas.py  requirements.txt
data/fit_file/: Fahrt_am_Morgen.fit
